# SatelliteSegmentation

./: .gitignore  Dockerfile  ExcessGreenSegmenter.py  LangSamSegmenter.py  README.md  SamEGSegmenter.py  Segmenter.py  edge_detection_lanes.py  excess_green.py  helpers.py  lane_markers.py  langsam.py  pyproject.toml  samexg.py  segmenter.py
examples/: download_satellite.py  dtr.py  excess_green.py  lane_markers.py  lanes_sanvicent.geojson  langsam.py  road_segmentation_comparison.py  sameg.py  tree_segmentation.py  tree_segmentation_comparison.py
notebooks/: load_geojson.ipynb
src/geoseg/: utils.py
src/geoseg/segmenters/: LaneSegmenter.py  LangSamSegmenter.py  RoadCartoSegmenter.py  RoadSamSegmenter.py
src/satellite_segmentation/: ExcessGreenSegmenter.py  LaneSegmenter.py  LangSamSegmenter.py  SamEGSegmenter.py  __init__.py  helpers.py  utils.py
src/satellite_segmentation/segmenters/: DetecTreeSegmenter.py  ExcessGreenSegmenter.py  LaneSegmenter.py  RoadCartoSegmenter.py  RoadSamSegmenter.py  SamEGSegmenter.py  Segmenter.py  __init__.py
