[project]
name = "satellite_segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "segment-geospatial>=0.12.6",
    "sam2",
    "numpy",
    "opencv-python-headless",
    "geopandas",
    "rasterio",
    "scipy",
    "shapely",
    "pillow",
    "detectree",
]
