[project]
name = "geoseg"
version = "0.1.0"
description = "Set of computer vision and deep learning tools for semantic segmentation on aerial images"
authors = [
  { name = "Pablo Villanueva-Domingo", email = "pablo.villanueva.domingo@gmail.com" }, 
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "segment-geospatial>=0.12.6",
    "sam2",
    "numpy",
    "opencv-python-headless",
    "geopandas",
    "rasterio",
    "scipy",
    "shapely",
    "pillow",
    "detectree",
    "wheel",          # for GDAL
    "setuptools>=67", # for GDAL
]
